--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "1.0.0",
   "description": "A package that outputs the time and routes for ocean fishing in Final Fantasy XIV.",
   "main": "index.js",
+  "author": "amagiri",
+  "bugs": {
+	"url": "https://github.com/amagiri/namazu/issues"
+  },
+  "homepage": "https://github.com/amagiri/namazu#readme",
+  "keywords": [
+    "ffxiv"
+  ],
+  "license": "MIT",
+  "repository": {
+	"type" : "git",
+	"url" : "git+https://github.com/amagiri/namazu.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "amagiri",
-  "license": "ISC",
   "devDependencies": {
-  "typescript": "^4.1.3"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "dayjs": "^1.9.8"
